fix: navbar item letter spacing 1 > 0

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -42,7 +42,7 @@
     transition: all 0.45s ease;
     text-decoration: none; /* Removes underline for links */
     font-weight: 500;
-    letter-spacing: 1px;
+    letter-spacing: 0px;
 }
 
 .navbarLogo {
